--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 .drag-handle {
   cursor: grab;
   touch-action: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 .drag-handle:active {
   cursor: grabbing;
